Extract class CodeCacheGcTrigger